# INFO-H410_Project

./: README.md  Slides_Project_2048.pptx  Slides_Template.pptx  colors.py  expectimax2.txt  expectimax3.txt  expectimax5.txt  game_ui.py  main.py  montecarlo20.txt  montecarlo30.txt  montecarlo40.txt  montecarlo50.txt  results_expectimax.xlsx  results_montecarlo.xlsx  test.py
2048/: ai.py  board.py  debug.py  drawer.py  main.py  pyproject.toml  settings.py  tile.py
2048/results/: expectimax4.txt  results_expectimax.xlsx  results_montecarlo.xlsx
8Puzzle/: EightPuzzle_RL.py  EightPuzzle_astar.py
functionning2048/: colors.py  game_ui.py  pyproject.toml
pythoncode/: ai.py  astar.py  board.py  drawer.py  main.py  settings.py  tile.py
remastered/: board.py  debug.py  drawer.py  level.py  main.py  settings.py  tile.py
results/: expectimax4.txt  expectimax6.txt  montecarlo10.txt
tempstests/: game_ui.py
