[tool.poetry]
name = "2048"
version = "1.0.0"
description = ""
authors = ["De Vos Sébastien <sebastien.de.vos@ulb.be>", "Kalai Tarik <tarik.kalai@ulb.be", "Silberwasser David <david.silberwasser@ulb.be"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.19"
pygame = ">=2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
