[tool.poetry]
name = "2048"
version = "0.0.1"
description = "The 2048 game AI, using reinforcement learning and A* search"
authors = ["seb <seb@seb.be>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.5"
pygame = ">=2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
